--- a/src/templates/actor/parts/skills/ActiveSkillList.html
+++ b/src/templates/actor/parts/skills/ActiveSkillList.html
@@ -17,7 +17,7 @@
             />
         </div>
     </div>
-    <div class="scroll-area left light-border-right-skills">
+    <div class="scroll-area left light-border-right-skills grid-skill-list">
         {{#each system.skills.active as |skill sid|}}
             {{> 'systems/shadowrun5e/dist/templates/common/List/ListItem.html'
                     name=(localizeSkill skill)
